--- a/style.css
+++ b/style.css
@@ -48,10 +48,15 @@ footer #links img {
     margin-left: 50px;
 }
 
+.card-title {
+    text-align: center;
+}
+
 .card-text {
     color: #c10;
     font-weight: 700; 
     margin-top: 30px;
+    text-align: center;
 }
 
 #compra{
@@ -61,6 +66,11 @@ footer #links img {
 .container-fluid img {
     width: 200px; 
     margin-left: 20px;
+}
+
+.container-fluid, .px-0 {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
 }
 
 #home {
@@ -82,16 +92,42 @@ footer #links img {
     background-position-y: center;
 }
 
-.d-flex {
+#cards, #cards2 {
     margin-top: 20px; 
     margin-bottom: 20px; 
-    justify-content: space-around; 
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .offcanvas-body {
     font-weight: 500;
 }
 
+#offcanva-img {
+    display: flex;
+    justify-content: center;
+
+    width: 90%;
+}
+
 .offcanvas-header {
     font-weight: 700;
+}
+
+#continua {
+    margin-top: 10px;
+}
+
+#botoes {
+    margin-top: 100px;
+}
+
+#botao-card {
+    margin-top: 8px;
+}
+
+@media screen and (max-width: 420px) {
+    footer {
+        display: none;
+    }
 }
