--- a/style.css
+++ b/style.css
@@ -142,3 +142,9 @@ h6 {
         display: none;
     }
 }
+
+@media screen and (max-width: 1024px) {
+    #cards, #cards2 {
+        flex-wrap: nowrap;
+    }
+}
